🚧 Set margin to .global-footer to prevent it from being it overlapped by .order-cta

--- a/style.css
+++ b/style.css
@@ -2545,10 +2545,10 @@ i {
     width: 100%; }
   .global-header .gnb {
     top: 0;
-    z-index: 50; }
+    z-index: 70; }
   .global-header .lnb {
     top: 50px;
-    z-index: 40; }
+    z-index: 60; }
   @media screen and (min-width: 768px) {
     .global-header {
       height: 130px; }
@@ -2558,6 +2558,7 @@ i {
 .global-footer {
   padding-top: 32px;
   padding-bottom: 40px;
+  margin-bottom: 56px;
   background-color: #f7f8fa; }
   .global-footer-title {
     font-size: 13px;
@@ -2597,21 +2598,23 @@ i {
       margin: 0 2px;
       content: ':'; }
   @media screen and (min-width: 1200px) {
-    .global-footer-title {
-      font-size: 14px;
-      line-height: 24px;
-      letter-spacing: -0.01em; }
-    .global-footer-contact:hover {
-      opacity: 0.5; }
-    .global-footer-detail-list {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start; }
-    .global-footer-detail-item:not(:last-child)::after {
-      margin: 0 8px;
-      content: '|'; }
-    .global-footer-detail-item a:hover {
-      text-decoration: underline; } }
+    .global-footer {
+      margin-bottom: 0; }
+      .global-footer-title {
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: -0.01em; }
+      .global-footer-contact:hover {
+        opacity: 0.5; }
+      .global-footer-detail-list {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; }
+      .global-footer-detail-item:not(:last-child)::after {
+        margin: 0 8px;
+        content: '|'; }
+      .global-footer-detail-item a:hover {
+        text-decoration: underline; } }
 
 .product-tab {
   position: sticky;
@@ -2669,5 +2672,35 @@ i {
   @media screen and (min-width: 1200px) {
     .product-tab-item button:hover {
       color: #ceb97b; } }
+
+.order-cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 50;
+  width: 100%;
+  height: 56px;
+  padding: 0 4px;
+  background: #fff; }
+  .order-cta .btn-ghost {
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 72px;
+    margin-right: 4px; }
+    .order-cta .btn-ghost i {
+      font-size: 24px;
+      color: #3f4150; }
+    .order-cta .btn-ghost span {
+      font-size: 10px;
+      font-weight: 400;
+      line-height: 16px;
+      letter-spacing: -0.05em;
+      color: #8c8d96; }
+  .order-cta .btn-primary {
+    flex-grow: 1; }
 
 /*# sourceMappingURL=style.css.map */
